Board Manage App for authentication

--- a/templates/views/profile.ejs
+++ b/templates/views/profile.ejs
@@ -13,7 +13,7 @@
         <%- include('../partials/header') %>
         <div class="jumbotron">
        
-            <h1 class="display-4"><%=name%></h1>
+            <h1 class="display-4"><%=user_name%></h1>
             <p class="lead">Age: <%=age%> <br> Email:<%=email%></p>
             <hr class="my-4">
             <div class="options">
