Board Manage App for authentication

--- a/templates/views/write.ejs
+++ b/templates/views/write.ejs
@@ -16,7 +16,7 @@
             <label for="comment">내용</label>
             <textarea class="form-control" name="content" rows="20" id="comment"></textarea>
           </div>
-         <textarea name="content" rows="20" cols="30"></textarea><br>
+         <button type="submit" class="btn btn-primary">확인</button>
     </form>
 </div>
 <%- include('../partials/footer') %>
