--- a/templates/views/404.ejs
+++ b/templates/views/404.ejs
@@ -5,16 +5,21 @@
 <head>
     <title>404</title>
     <link rel="icon" href="/img/weather.png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 
 <body>
     <div class="main-content">
         <%- include('../partials/header') %>
+        <div class="jumbotron">
         <p><%=errorMessage%></p>
+    </div>
     </div>
     
     <%- include('../partials/footer') %>
+    <script 
+src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
